--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </ul>
                         </div>
                     </nav>
-                    <div class="header-btn d-none d-lg-block">
+                    <div class="header-btn d-md-block d-none d-lg-block">
                         <a class="btn primary-btn" href="#contact">Contact Me</a>
                     </div>
                     <div class="nav-right d-flex justify-content-end align-items-center">
