--- a/index.html
+++ b/index.html
@@ -106,25 +106,8 @@
         <div class="slider-area">
            
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                        <div class="slider-content">
-                            <div class="animated-title">
-                                <h1> Hello, I'm Zidane Nguyen</h1>
-                                <div class="word"> </div>
-                            </div>
-                            <p>The Web was born to meet those needs for users, so the Web is increasingly being pursued by programmers and I am also a beginner with the desire to become a Full Stack programmer.</p>
-                            </p>
-                            <div class="slider-button">
-                                <a href="./assets/images/CV.pdf" download class="btn banner-btn">Download CV <i class="bi bi-download"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                        <div class="slider-img-box d-flex justify-content-end">
-                            <img src="./assets/images/banner-img.png" class="img-fluid" alt="banner-img">
-                        </div>
-                    </div>
+                <div class="content-slider">
+                    <h1>Welcome to my official Page</h1>
                 </div>
             </div>
         </div>
